--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,23 @@
-[build-system]
-requires = [
-    "setuptools",
-    "glfw>=1.4.0",
-    "numpy>=1.11",
-    "Cython>=0.27.2",
-    "imageio>=2.1.2",
-    "cffi>=1.10",
-    "fasteners~=0.15"
+[tool.poetry]
+name = "free-mujoco-py"
+version = "2.1.2"
+description = ""
+authors = ["Costa Huang <costa.huang@outlook.com>"]
+packages = [
+    {include = "mujoco_py"}
 ]
+
+[tool.poetry.dependencies]
+python = ">=3.7.1,<3.11"
+glfw = "^2.3.0"
+numpy = "^1.21.3"
+Cython = "^0.29.24"
+imageio = "^2.9.0"
+cffi = "^1.15.0"
+fasteners = "0.15"
+
+[tool.poetry.dev-dependencies]
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
