--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
 name = "free-mujoco-py"
-version = "2.1.3"
+version = "2.1.1"
 description = ""
 authors = ["Costa Huang <costa.huang@outlook.com>"]
 packages = [
     {include = "mujoco_py"}
 ]
+include = ['mujoco_py/binaries/**/*']
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<3.11"
