--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Costa Huang <costa.huang@outlook.com>"]
 packages = [
     {include = "mujoco_py"}
 ]
-include = ['mujoco_py/binaries/**/*']
+include = ['mujoco_py/binaries/**/*', 'mujoco_py/generated/cymj*']
+build = 'build.py'
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<3.11"
@@ -22,3 +23,14 @@ fasteners = "0.15"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.cibuildwheel]
+skip = "cp36-* cp37-*"
+before-all = """
+yum install libtiff-devel libjpeg-devel openjpeg2-devel zlib-devel \
+    freetype-devel lcms2-devel libwebp-devel tcl-devel tk-devel \
+    harfbuzz-devel fribidi-devel libraqm-devel libimagequant-devel libxcb-devel
+pip install --upgrade poetry
+poetry install
+"""
+before-build = "pip install -r requirements.txt"
