--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install poetry dependencies
         run: poetry install
       - name: Build wheels
-        run: poetry build
+        run: poetry run python setup1.py bdist_wheel
       - uses: actions/upload-artifact@v2
         with:
           name: wheels
